proper readme added

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -399,8 +399,8 @@ let module = {
 			major: 0,
 			minor: 5,
 			patch: 0,
-			day: 18,
-			month: 4,
+			day: 11,
+			month: 5,
 			year: 2019,
 			full: function()
 					{
@@ -9503,7 +9503,7 @@ let buttons = [
 						ctx.fillRect(5, 5, 10, 10);
 					},
 			"tooltip": "abort the program",
-			"hotkey": "alt-e",
+			"hotkey": "F10",
 		},
 		{
 			"click": cmd_step_into,
