Array.pop() now causes an error when applied to an empty array.

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -398,8 +398,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 0,
-			day: 11,
+			patch: 1,
+			day: 14,
 			month: 5,
 			year: 2019,
 			full: function()
@@ -1096,6 +1096,7 @@ let errors = {
 		"am-16b": "cannot order types '$$' and '$$'",
 		"am-17": "cannot construct an array of negative size",
 		"am-18": "parameter 'position' of 'Array.insert' is out of range; position is $$, array size is $$",
+		"am-18b": "'Array.pop' cannot be applied to an empty array",
 		"am-19": "the 'comparator' function passed to 'Array.sort' must return a numeric value, found '$$'",
 		"am-20": "invalid string index '$$' of type '$$', 'Integer' or 'Range' expected",
 		"am-21": "string index '$$' out of range; index must not be negative",
@@ -1441,7 +1442,7 @@ let core = {
 						return {"type": this.program.types[module.typeid_null], "value": {"b": null}};
 					},
 					"pop": function(object) {
-						if (object.value.b.length == 0) return {"type": this.program.types[module.typeid_null], "value": {"b": null}};
+						if (object.value.b.length == 0) this.error("/argument-mismatch/am-18b");
 						return object.value.b.pop();
 					},
 					"insert": function(object, position, item) {
@@ -15221,8 +15222,8 @@ if (doc) doc.children.push({
 			</td></tr>
 			<tr><th>pop</th><td>
 				The <code class="code">function pop()</code> removes and returns
-				the last item from the array. When applied to the empty array is
-				does nothing and returns <keyword>null</keyword>.
+				the last item from the array. When applied to the empty array it
+				raises an error.
 			</td></tr>
 			<tr><th>insert</th><td>
 				The <code class="code">function insert(position, item)</code>
@@ -17842,6 +17843,16 @@ if (doc) doc.children.push({
 			<p>
 			This error occurs if the expression controlling the array position
 			happens to take values not anticipated by the programmer.
+			</p>
+		`,
+		"children": []},
+		{"id": "am-18b",
+		"content": `
+			<p>
+			The <a href="#/language/types/array">Array.pop</a> function removes
+			the last item of the array, which is returned. If the array is
+			empty and hence there is no item to remove and return then this
+			error is reported.
 			</p>
 		`,
 		"children": []},
