style checking mode added

--- a/distribution/index.html
+++ b/distribution/index.html
@@ -431,6 +431,11 @@ let module = {
 
 	// implementation limit
 	maxstacksize: 1000,
+
+	// options and configurations
+	options: {
+			checkstyle: false,   // must be false by default, so counter examples in the documentation work
+		},
 };
 
 
@@ -1004,7 +1009,6 @@ let errors = {
 		"se-9": "syntax error in super reference; identifier expected after dot '.'",
 		"se-10": "syntax error in $$; name (identifier or super name) expected",
 		"se-11": "syntax error in namespace reference; identifier expected after dot '.'",
-//		"se-12": "error in $$; $$ '$$' requires a 'this' object and hence can be accessed only from inside the class '$$' or a derived class",
 		"se-13": "error in $$; $$ '$$' requires a 'this' object and hence cannot be accessed from a static context",
 		"se-14": "syntax error in argument list; positional argument follows named argument",
 		"se-15": "syntax error in argument list; expected comma ',' or closing parenthesis ')'",
@@ -1135,7 +1139,6 @@ let errors = {
 		"ne-7": "error in $$; cannot access variable '$$', which is declared in a different function",
 		"ne-8": "error in $$; '$$' cannot be accessed because it is a private member of type '$$'",
 		"ne-9": "error in namespace lookup; name '$$' not found in namespace '$$'",
-//		"ne-10": "name '$$' does not refer to a variable, function, or type",
 		"ne-11": "a name referring to a namespace is not allowed in this context",
 		"ne-12": "type '$$' does not have a public static member '$$'",
 		"ne-13": "type '$$' does not have a public member '$$'",
@@ -1161,6 +1164,12 @@ let errors = {
 		"ue-1": "assertion failed; $$",
 		"ue-2": "runtime error; $$",
 		"ue-3": "uncaught exception; $$",
+	},
+	"style": {
+		"ste-1": "coding style violation; invalid line indentation",
+		"ste-2": "coding style violation; inconsistent block indentation",
+		"ste-3": "coding style violation; the $$ name '$$' should start with a lowercase letter or with an underscore",
+		"ste-4": "coding style violation; the class name '$$' should start with a capital letter",
 	},
 	"internal": {
 		"ie-1": "internal parser error; $$",
@@ -2535,7 +2544,11 @@ module.get_token = function (state, peek)
 	peek = (peek !== undefined) ? peek : false;
 	let where = (peek) ? state.get() : false;
 	state.skip();
-	if (state.eof()) return {"type": "end-of-file", "value": "", "code": ""};
+	let line = state.line;
+	if (state.eof()) return {"type": "end-of-file", "value": "", "code": "", "line": line};
+
+	let indent = state.indentation();
+	let tok = null;
 
 	let c = state.current();
 	if ((c >= 'A' && c <= 'Z') || (c >= 'a' && c <= 'z') || c == '_')
@@ -2551,7 +2564,7 @@ module.get_token = function (state, peek)
 		}
 		let value = state.source.substring(start, state.pos);
 		if (where) state.set(where); else state.skip();
-		return {"type": (module.keywords.hasOwnProperty(value)) ? "keyword" : "identifier", "value": value, "code": value};
+		tok = {"type": (module.keywords.hasOwnProperty(value)) ? "keyword" : "identifier", "value": value, "code": value, "line": line};
 	}
 	else if (c >= '0' && c <= '9')
 	{
@@ -2582,7 +2595,7 @@ module.get_token = function (state, peek)
 		let value = state.source.substring(start, state.pos);
 		let n = parseFloat(value);
 		if (where) state.set(where); else state.skip();
-		return {"type": type, "value": n, "code": value};
+		tok = {"type": type, "value": n, "code": value, "line": line};
 	}
 	else if (c == '\"')
 	{
@@ -2637,7 +2650,7 @@ module.get_token = function (state, peek)
 			}
 		}
 		if (where) state.set(where); else state.skip();
-		return {"type": "string", "value": value, "code": code};
+		tok = {"type": "string", "value": value, "code": code, "line": line};
 	}
 	else
 	{
@@ -2651,16 +2664,41 @@ module.get_token = function (state, peek)
 			if (op != "!")
 			{
 				if (where) state.set(where); else state.skip();
-				return {"type": "operator", "value": op, "code": op};
+				tok = {"type": "operator", "value": op, "code": op, "line": line};
 			}
 		}
-		let type = null;
-		if (module.groupings.indexOf(c) >= 0) type = "grouping";
-		else if (module.delimiters.indexOf(c) >= 0) type = "delimiter";
-		else state.error("/syntax/se-5", [c]);
-		if (where) state.set(where); else state.skip();
-		return {"type": type, "value": c, "code": c};
+		if (tok === null)
+		{
+			let type = null;
+			if (module.groupings.indexOf(c) >= 0) type = "grouping";
+			else if (module.delimiters.indexOf(c) >= 0) type = "delimiter";
+			else state.error("/syntax/se-5", [c]);
+			if (where) state.set(where); else state.skip();
+			tok = {"type": type, "value": c, "code": c, "line": line};
+		}
 	}
+
+	if (module.options.checkstyle && ! state.builtin())
+	{
+		// check for indentation problems
+		if (tok.type == "keyword" && (tok.value == "public" || tok.value == "protected" || tok.value == "private"))
+		{ }
+		else if (tok.type == "operator" && tok.value == ":")
+		{ }
+		else
+		{
+			let topmost = state.indent[state.indent.length - 1];
+//console.log(indent, tok, state.indent);
+			if (topmost < 0 && line != -1-topmost)
+			{
+				if (indent <= state.indent[state.indent.length - 2]) state.error("/style/ste-1");
+				state.indent[state.indent.length - 1] = indent;
+			}
+			else if (indent < topmost && state.current() != '}') state.error("/style/ste-1");
+		}
+	}
+
+	return tok;
 }
 
 
@@ -3951,7 +3989,6 @@ function parse_expression(state, parent, lhs)
 				ex.step = constantstep;
 				ex.sim = simfalse;
 			}
-//			else state.error("/name/ne-10", [name]);
 			else module.assert(false, "If this assertion fails then error ne-10 must be re-activated.");
 		}
 		else if (token.type == "keyword" && token.value == "this")
@@ -4098,11 +4135,19 @@ function parse_expression(state, parent, lhs)
 			// parse the function body
 			token = module.get_token(state);
 			if (token.type != "grouping" || token.value != '{') state.error("/syntax/se-40", ["anonymous function"]);
+			state.indent.push(-1 - token.line);
 			while (true)
 			{
 				token = module.get_token(state, true);
 				if (token.type == "grouping" && token.value == '}')
 				{
+					state.indent.pop();
+					if (module.options.checkstyle && ! state.builtin())
+					{
+						let indent = state.indentation();
+						let topmost = state.indent[state.indent.length - 1];
+						if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+					}
 					module.get_token(state);
 					break;
 				}
@@ -4919,6 +4964,12 @@ function parse_var(state, parent, container)
 		if (token.type != "identifier") state.error("/syntax/se-50");
 		if (parent.names.hasOwnProperty(token.value)) state.error("/name/ne-14", [token.value]);
 
+		// check variable name
+		if (module.options.checkstyle && ! state.builtin() && token.value[0] >= 'A' && token.value[0] <= 'Z')
+		{
+			state.error("/style/ste-3", ["variable", token.value]);
+		}
+
 		// create the variable
 		let id = (container.petype == "type") ? container.objectsize : container.variables.length;
 		let pe = { "petype": "variable", "where": where, "parent": parent, "name": token.value, "id": id,
@@ -5011,6 +5062,12 @@ function parse_function(state, parent, petype)
 	let fname = token.value;
 	if (parent.names.hasOwnProperty(fname)) state.error("/name/ne-15", [fname]);
 
+	// check function name
+	if (module.options.checkstyle && ! state.builtin() && fname[0] >= 'A' && fname[0] <= 'Z')
+	{
+		state.error("/style/ste-3", ["function", fname]);
+	}
+
 	// create the function
 	let func = { "petype": petype, "where": where, "declaration": true, "parent": parent, "commands": [], "variables": [], "name": fname, "names": {}, "params": [], "step": scopestep, "sim": simfalse };
 	parent.names[fname] = func;
@@ -5062,11 +5119,19 @@ function parse_function(state, parent, petype)
 	// parse the function body
 	token = module.get_token(state);
 	if (token.type != "grouping" || token.value != '{') state.error("/syntax/se-40", ["function declaration"]);
+	state.indent.push(-1 - token.line);
 	while (true)
 	{
 		token = module.get_token(state, true);
 		if (token.type == "grouping" && token.value == '}')
 		{
+			state.indent.pop();
+			if (module.options.checkstyle && ! state.builtin())
+			{
+				let indent = state.indentation();
+				let topmost = state.indent[state.indent.length - 1];
+				if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+			}
 			module.get_token(state);
 			break;
 		}
@@ -5210,11 +5275,19 @@ function parse_constructor(state, parent)
 
 	// parse the constructor body
 	if (token.type != "grouping" || token.value != '{') state.error("/syntax/se-40", ["constructor declaration"]);
+	state.indent.push(-1 - token.line);
 	while (true)
 	{
 		token = module.get_token(state, true);
 		if (token.type == "grouping" && token.value == '}')
 		{
+			state.indent.pop();
+			if (module.options.checkstyle && ! state.builtin())
+			{
+				let indent = state.indentation();
+				let topmost = state.indent[state.indent.length - 1];
+				if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+			}
 			module.get_token(state);
 			break;
 		}
@@ -5281,6 +5354,12 @@ function parse_class(state, parent)
 	let cname = token.value;
 	if (parent.names.hasOwnProperty(cname)) state.error("/name/ne-18", [cname]);
 
+	// check class name
+	if (module.options.checkstyle && ! state.builtin() && (cname[0] < 'A' || cname[0] > 'Z'))
+	{
+		state.error("/style/ste-4", [cname]);
+	}
+
 	// create the class
 	let cls = { "petype": "type", "where": where, "parent": parent, "objectsize": 0, "variables": [], "staticvariables": [], "members": {}, "staticmembers": {}, "name": cname, "names": {},
 			"step": function()
@@ -5329,6 +5408,7 @@ function parse_class(state, parent)
 		token = module.get_token(state);
 	}
 	if (token.type != "grouping" || token.value != '{') state.error("/syntax/se-40", ["class declaration"]);
+	state.indent.push(-1 - token.line);
 
 	// parse the class body
 	let access = null;
@@ -5338,6 +5418,13 @@ function parse_class(state, parent)
 		token = module.get_token(state, true);
 		if (token.type == "grouping" && token.value == '}')
 		{
+			state.indent.pop();
+			if (module.options.checkstyle && ! state.builtin())
+			{
+				let indent = state.indentation();
+				let topmost = state.indent[state.indent.length - 1];
+				if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+			}
 			module.get_token(state);
 			break;
 		}
@@ -5469,6 +5556,12 @@ function parse_namespace(state, parent)
 	if (token.type != "identifier") state.error("/syntax/se-64");
 	let nname = token.value;
 
+	// check namespace name
+	if (module.options.checkstyle && ! state.builtin() && nname[0] >= 'A' && nname[0] <= 'Z')
+	{
+		state.error("/style/ste-3", ["namespace", nname]);
+	}
+
 	// obtain the named object corresponding to the namespace globally across instances
 	let global_nspace = null;
 	if (parent.names.hasOwnProperty(nname))
@@ -5490,12 +5583,20 @@ function parse_namespace(state, parent)
 	// parse the namespace body
 	token = module.get_token(state);
 	if (token.type != "grouping" || token.value != '{') state.error("/syntax/se-40", ["namespace declaration"]);
+	state.indent.push(-1 - token.line);
 	while (true)
 	{
 		// check for end-of-body
 		token = module.get_token(state, true);
 		if (token.type == "grouping" && token.value == '}')
 		{
+			state.indent.pop();
+			if (module.options.checkstyle && ! state.builtin())
+			{
+				let indent = state.indentation();
+				let topmost = state.indent[state.indent.length - 1];
+				if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+			}
 			module.get_token(state);
 			break;
 		}
@@ -6458,12 +6559,20 @@ function parse_statement(state, parent, var_allowed)
 		{
 			// parse a scope
 			module.get_token(state);
+			state.indent.push(-1 - token.line);
 			let scope = { "petype": "scope", "where": where, "parent": parent, "commands": [], "names": {}, "step": scopestep, "sim": simfalse };
 			while (true)
 			{
 				token = module.get_token(state, true);
 				if (token.type == "grouping" && token.value == '}')
 				{
+					state.indent.pop();
+					if (module.options.checkstyle && ! state.builtin())
+					{
+						let indent = state.indentation();
+						let topmost = state.indent[state.indent.length - 1];
+						if (topmost >= 0 && topmost != indent) state.error("/style/ste-2");
+					}
 					module.get_token(state);
 					break;
 				}
@@ -6506,6 +6615,21 @@ function parse_statement_or_declaration(state, parent)
 	if (! state.builtin())
 	{
 		state.skip();
+
+//		if (module.options.checkstyle && ! state.builtin())
+//		{
+//			// check for indentation problems
+//			let indent = state.indentation();
+//			let topmost = state.indent[state.indent.length - 1];
+//			if (topmost < 0)
+//			{
+//console.log(state.indent);
+//				if (indent <= state.indent[state.indent.length - 2]) state.error("/style/ste-1");
+//				state.indent[state.indent.length - 1] = indent;
+//			}
+//			else if (indent != topmost && state.current() != '}') state.error("/style/ste-1");
+//		}
+
 		if (! state.program.breakpoints.hasOwnProperty(state.line))
 		{
 			// create and register a new breakpoint
@@ -6533,6 +6657,8 @@ function parse_statement_or_declaration(state, parent)
 // The function returns an object with the fields
 //   program - the "parsed" program as an AST object, or null in case of failure
 //   errors  - an array of with array error objects with fields type, line, message
+// If module.option.checkstyle is set to true then the parser reports
+// coding style warnings in the errors return value.
 module.parse = function(sourcecode)
 {
 	function ParseError(msg) { this.message = msg; }
@@ -6559,6 +6685,7 @@ module.parse = function(sourcecode)
 			"pos": 0,               // zero-based position in the source code string
 			"line": 1,              // one-based line number
 			"ch": 0,                // zero-based character number within the line
+			"indent": [0],          // stack of nested indentation widths
 			"errors": [],           // list of errors, currently at most one
 			"impl": {},             // implementations of built-in functions
 			"builtin": function()
@@ -6597,6 +6724,18 @@ module.parse = function(sourcecode)
 					{ return { "pos": this.pos, "line": this.line, "ch": this.ch }; },
 			"set": function(where)
 					{ this.pos = where.pos; this.line = where.line, this.ch = where.ch },
+			"indentation": function()
+					{
+						let w = 0;
+						for (let i=this.pos - this.ch; i<this.pos; i++)
+						{
+							let c = this.source[i];
+							if (c == ' ') w++;
+							else if (c == '\t') { w += 4; w -= (w % 4); }
+							else break;
+						}
+						return w;
+					},
 			"advance": function(n)
 					{
 						if (n === undefined) n = 1;
@@ -6700,7 +6839,7 @@ module.parse = function(sourcecode)
 			let err = {
 						type: "error",
 						href: "#/errors/internal/ie-1",
-						message: module.composeError("/internal/ie-1", module.ex2string(ex)),
+						message: module.composeError("/internal/ie-1", [module.ex2string(ex)]),
 					};
 			return { "program": null, "errors": [err] };
 		}
@@ -9669,6 +9808,10 @@ function loadConfig()
 				buttons[i].hotkey = config.hotkeys[i];
 			}
 		}
+		if (config.hasOwnProperty("options"))
+		{
+			TScript.options = config.options;
+		}
 	}
 	return null;
 }
@@ -9677,11 +9820,12 @@ loadConfig();
 // save hotkeys
 function saveConfig()
 {
-	let config = {"hotkeys": []};
+	let config = {"options": TScript.options, "hotkeys": []};
 	for (let i=0; i<buttons.length; i++)
 	{
 		config.hotkeys.push(buttons[i].hotkey);
 	}
+	console.log(config);
 	localStorage.setItem("tscript.ide.config", JSON.stringify(config));
 }
 
@@ -9704,15 +9848,16 @@ function configDlg()
 				}
 			};
 	let dlg_buttons = [];
+	let div = tgui.createElement({parent: dlg, type: "div"});
 	for (let i=0; i<buttons.length; i++)
 	{
 		let description = Object.assign({}, buttons[i]);
 		description.width = 20;
 		description.height = 20;
-		description.style = {"float": "left", "height": "22px"};
+		description.style = {"height": "22px"};
 		if (description.hotkey) description.tooltip += " (" + description.hotkey + ")";
 		delete description.hotkey;
-		description.parent = dlg;
+		description.parent = div;
 		{
 			let btn = i;
 			description.click = function()
@@ -9766,6 +9911,19 @@ function configDlg()
 		}
 		dlg_buttons.push(tgui.createButton(description));
 	}
+
+	let checked = "";
+	
+	div = tgui.createElement({parent: dlg, type: "div"});
+	let h3 = tgui.createElement({parent: div, type: "h3", text: "Coding Style"});
+	let p = tgui.createElement({parent: div, type: "p"});
+	let lbl = tgui.createElement({parent: p, type: "label", "html":" enable style errors "});
+	let checkbox = tgui.createElement({parent: lbl, type: "input", properties: {type: "checkbox"},
+				click: function(event)
+				{ TScript.options.checkstyle = checkbox.checked; },
+			});
+	if (TScript.options.checkstyle) checkbox.checked = true;
+//	html: "<p><label><input id=\"check_style\" " + checked + " type=\"checkbox\"/></label></p>"});
 
 	tgui.startModal(dlg);
 }
@@ -18729,6 +18887,79 @@ if (doc) doc.children.push({
 		`,
 		"children": []},
 	]},
+	{"id": "style",
+	"name": "Style Errors",
+	"title": "Style Errors",
+	"content": `
+		This section collects errors reported by the style checker. They are not
+		programming errors in a strict sense. Yet, if configured to do so,
+		TScript reports style errors to enforce good programming style. This
+		behavior can be changed in the configuration dialog.
+	`,
+	"children": [
+		{"id": "ste-1",
+		"content": `
+			<p>
+			This error is reported if the indentation of a program is
+			inconsistent. The indentation in each block must be larger
+			than in its surrounding block, and it must be consistent
+			within the block.
+			<tscript>
+			print("hello");
+			{
+			print("world");   # wrong; inner block indentation must
+			                  # exceed outer block indentation
+			}
+			</tscript>
+			</p>
+		`,
+		"children": []},
+		{"id": "ste-2",
+		"content": `
+			<p>
+			This error is reported if the indentation of program block
+			markers is inconsistent, i.e., if the indentation of the line
+			containing an opening brace differs from the indentation of
+			the line with the corresponding closing brace:
+			<tscript>
+			if true then {
+				print("true!");
+				}   # This brace must not be indented
+			</tscript>
+			</p>
+		`,
+		"children": []},
+		{"id": "ste-3",
+		"content": `
+			<p>
+			This error can occur when a variable, function, or namespace name
+			starts with a capital letter. By convention, these names start with
+			a lowercase letter or an underscore.
+			</p>
+			<tscript>
+			{
+				var foo = 7;   # okay
+				var Bar = 8;   # wrong; easily mistaken for a type
+			}
+			</tscript>
+		`,
+		"children": []},
+		{"id": "ste-4",
+		"content": `
+			<p>
+			This error can occur when a class name starts with a
+			lowercase letter or an underscore. By convention, TScript
+			class names start with a capital letter.
+			</p>
+			<tscript>
+			{
+				class Foo {}   # okay
+				class bar {}   # wrong
+			}
+			</tscript>
+		`,
+		"children": []},
+	]},
 	{"id": "internal",
 	"name": "Internal Errors",
 	"title": "Internal Errors",
@@ -19233,7 +19464,7 @@ span.CodeMirror-selectedtext { background: none; }
 
 .tgui-tooltip
 {
-	left: 3px;
+	left: 1px;
 	top: 3px;
 	background-color: #eec;
 	color: #000;
