--- a/distribution/index.html
+++ b/distribution/index.html
@@ -394,8 +394,8 @@ let module = {
 			type: "beta",
 			major: 0,
 			minor: 5,
-			patch: 7,
-			day: 7,
+			patch: 8,
+			day: 26,
 			month: 10,
 			year: 2019,
 			full: function()
@@ -7564,11 +7564,11 @@ module.releaseHotkey = function(hotkey)
 	delete hotkeys[module.normalizeHotkey(hotkey)];
 }
 
-module.setTooltip = function(element, tooltip = "")
+module.setTooltip = function(element, tooltip = "", direction="left")
 {
 	let tt = element.getElementsByClassName("tgui-tooltip");
 	for (let i=0; i<tt.length; i++) element.removeChild(tt[i]);
-	createControl("div", {"parent": element, "text": tooltip}, "tgui tgui-tooltip");
+	createControl("div", {"parent": element, "text": tooltip}, "tgui tgui-tooltip tgui-tooltip-" + direction);
 }
 
 // Create a new DOM element, acting as the control's main DOM element.
@@ -7611,6 +7611,7 @@ function createControl(type, description, classname)
 
 	// add a tooltip
 	if (description.hasOwnProperty("tooltip")) module.setTooltip(element, description.tooltip);
+	else if (description.hasOwnProperty("tooltip-right")) module.setTooltip(element, description["tooltip-right"], "right");
 
 	// add a click handler
 	if (description.hasOwnProperty("click"))
@@ -8236,6 +8237,7 @@ module.createPanel = function(description)
 				},
 				"parent": control.titlebar_container,
 				"classname": "tgui-panel-dockbutton",
+				"tooltip-right": "minimize",
 			});
 	control.button_float = tgui.createButton({
 				"click": function () { control.dock("float"); return false; },
@@ -8260,6 +8262,7 @@ module.createPanel = function(description)
 				},
 				"parent": control.titlebar_container,
 				"classname": "tgui-panel-dockbutton",
+				"tooltip-right": "floating",
 			});
 	control.button_max = tgui.createButton({
 				"click": function () { control.dock("max"); return false; },
@@ -8280,6 +8283,7 @@ module.createPanel = function(description)
 				},
 				"parent": control.titlebar_container,
 				"classname": "tgui-panel-dockbutton",
+				"tooltip-right": "maximize",
 			});
 	control.button_right = tgui.createButton({
 				"click": function () { control.dock("right"); return false; },
@@ -8304,6 +8308,7 @@ module.createPanel = function(description)
 				},
 				"parent": control.titlebar_container,
 				"classname": "tgui-panel-dockbutton",
+				"tooltip-right": "dock right",
 			});
 	control.button_left = tgui.createButton({
 				"click": function () { control.dock("left"); return false; },
@@ -8328,6 +8333,7 @@ module.createPanel = function(description)
 				},
 				"parent": control.titlebar_container,
 				"classname": "tgui-panel-dockbutton",
+				"tooltip-right": "dock left",
 			});
 
 	// create the content div
@@ -9808,20 +9814,19 @@ function configDlg()
 {
 	let dlg = tgui.createElement({
 			"type": "div",
-			"style": {"position": "fixed", "width": "50vw", "left": "25vw", "height": "50vh", "top": "25vh", "background": "#eee"},
-			"html": "<h3>Configure Hotkeys</h3><p>Click a button to configure its hotkey, or press escape to exit.</p>",
+			"style": {"position": "fixed", "width": "50vw", "left": "25vw", "height": "50vh", "top": "25vh", "background": "#eee", "overflow": "hidden"},
 		});
-	dlg.onKeyDown = function(event)
-			{
-				if (event.key == "Escape")
-				{
-					saveConfig();
-					tgui.stopModal();
-					event.preventDefault();
-					event.stopPropagation();
-					return false;
-				}
-			};
+	let titlebar = tgui.createElement({
+			"parent": dlg,
+			"type": "div",
+			"style": {"position": "absolute", "width": "50vw", "left": "0", "height": "22px", "top": "0", "background": "#008", "color": "#fff", "padding": "2px 10px"},
+			"text": "configuration",
+		});
+	let content = tgui.createElement({
+			"parent": dlg,
+			"type": "div",
+			"html": "<h3 style=\"margin-top: 20px;\">Configure Hotkeys</h3><p>Click a button to configure its hotkey.</p>",
+		});
 	let dlg_buttons = [];
 	let div = tgui.createElement({parent: dlg, type: "div"});
 	for (let i=0; i<buttons.length; i++)
@@ -9890,7 +9895,7 @@ function configDlg()
 	let checked = "";
 	
 	div = tgui.createElement({parent: dlg, type: "div"});
-	let h3 = tgui.createElement({parent: div, type: "h3", text: "Coding Style"});
+	let h3 = tgui.createElement({parent: div, type: "h3", style: {"margin-top": "20px"}, text: "Coding Style"});
 	let p = tgui.createElement({parent: div, type: "p"});
 	let lbl = tgui.createElement({parent: p, type: "label", "html":" enable style errors "});
 	let checkbox = tgui.createElement({parent: lbl, type: "input", properties: {type: "checkbox"},
@@ -9898,7 +9903,32 @@ function configDlg()
 				{ TScript.options.checkstyle = checkbox.checked; },
 			});
 	if (TScript.options.checkstyle) checkbox.checked = true;
-//	html: "<p><label><input id=\"check_style\" " + checked + " type=\"checkbox\"/></label></p>"});
+
+	let close = tgui.createElement({
+			"parent": dlg,
+			"type": "button",
+			"style": {"position": "absolute", "right": "10px", "bottom": "10px", "width": "100px", "height": "25px"},
+			"text": "Close",
+		});
+	close.addEventListener("click", function(event)
+			{
+				tgui.stopModal();
+				event.preventDefault();
+				event.stopPropagation();
+				return false;
+			});
+
+	dlg.onKeyDown = function(event)
+			{
+				if (event.key == "Escape")
+				{
+					saveConfig();
+					tgui.stopModal();
+					event.preventDefault();
+					event.stopPropagation();
+					return false;
+				}
+			};
 
 	tgui.startModal(dlg);
 }
@@ -9930,21 +9960,32 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 			"properties": {"size": Math.max(2, files.length)},
 			"style": {"position": "absolute", "width": "46vw", "left": "2vw", "height": "calc(70vh - 80px)", "top": "30px", "background": "#fff", "overflow": "scroll"},
 		});
+	let buttons = tgui.createElement({
+			"parent": dlg,
+			"type": "div",
+			"style": {"position": "absolute", "width": "46vw", "left": "2vw", "height": "25px", "bottom": "10px"},
+		});
 	let name = {value: filename};
 	if (allowNewFilename)
 	{
 		name = tgui.createElement({
-				"parent": dlg,
+				"parent": buttons,
 				"type": "input",
-				"style": {"position": "absolute", "width": "calc(46vw - 120px)", "left": "2vw", "height": "20px", "bottom": "10px", "background": "#fff"},
+				"style": {"width": "calc(46vw - 240px)", "height": "20px", "background": "#fff"},
 				"text": filename,
 			});
 	}
 	let okay = tgui.createElement({
-			"parent": dlg,
+			"parent": buttons,
 			"type": "button",
-			"style": {"position": "absolute", "width": "100px", "right": "2vw", "height": "25px", "bottom": "10px"},
+			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
 			"text": "Okay",
+		});
+	let cancel = tgui.createElement({
+			"parent": buttons,
+			"type": "button",
+			"style": {"width": "100px", "height": "25px", "margin-left": "10px"},
+			"text": "Cancel",
 		});
 
 	// populate options
@@ -9992,6 +10033,13 @@ function fileDlg(title, filename, allowNewFilename, onOkay)
 						onOkay(fn);
 					}
 				}
+				return false;
+			});
+	cancel.addEventListener("click", function(event)
+			{
+				tgui.stopModal();
+				event.preventDefault();
+				event.stopPropagation();
 				return false;
 			});
 
@@ -19521,19 +19569,30 @@ span.CodeMirror-selectedtext { background: none; }
 .tgui-tooltip
 {
 	display: none;
-	left: 1px;
-	top: 25px;
 	background-color: #eec;
 	color: #000;
 	font-family: sans-serif;
 	font-size: 9pt;
-	position: absolute;
 	transition: opacity 0.5s;
 	padding: 2px;
 	border: 1px solid #000;
 	border-radius: 3px;
 	white-space: nowrap;
 	z-index: 10;
+}
+
+.tgui-tooltip-left
+{
+	position: absolute;
+	left: 1px;
+	top: 25px;
+}
+
+.tgui-tooltip-right
+{
+	position: absolute;
+	right: 1px;
+	top: 25px;
 }
 
 .tgui-control:hover .tgui-tooltip
@@ -19748,6 +19807,10 @@ h2 {
 
 p {
 	margin: 10px 0 10px 0;
+}
+
+button {
+	border: black 1px solid;
 }
 
 .ide-main {
